--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Alpine Bay</title>
+  <title>The Apline Bay</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@300;400;600;700&display=swap" rel="stylesheet">
 
@@ -359,7 +359,7 @@
 
 <header>
   <div class="header-inner">
-    <div class="title">The Alpine Bay</div>
+    <div class="title">The Apline Bay</div>
   </div>
 </header>
 
