--- a/index.html
+++ b/index.html
@@ -24,6 +24,33 @@
       box-sizing: border-box;
     }
 
+    @keyframes flowRibbon1 {
+      0%, 100% {
+        transform: translateX(-5%) translateY(-3%) rotate(0deg);
+      }
+      50% {
+        transform: translateX(5%) translateY(3%) rotate(2deg);
+      }
+    }
+
+    @keyframes flowRibbon2 {
+      0%, 100% {
+        transform: translateX(3%) translateY(5%) rotate(0deg);
+      }
+      50% {
+        transform: translateX(-3%) translateY(-5%) rotate(-2deg);
+      }
+    }
+
+    @keyframes flowRibbon3 {
+      0%, 100% {
+        transform: translateX(-4%) translateY(4%) rotate(0deg);
+      }
+      50% {
+        transform: translateX(4%) translateY(-4%) rotate(1deg);
+      }
+    }
+
     html,body{
       height:100%;
       margin:0;
@@ -34,6 +61,101 @@
         linear-gradient(180deg, #0a1a2e 0%, #050d1a 50%, #020508 100%);
       color: var(--text);
       overflow-x: hidden;
+      position: relative;
+    }
+
+    /* Light ribbon 1 - main sweep */
+    body::before {
+      content: '';
+      position: fixed;
+      top: -20%;
+      left: -20%;
+      width: 80%;
+      height: 120%;
+      background: 
+        radial-gradient(ellipse 1200px 300px at 50% 50%, 
+          rgba(80, 160, 240, 0.4) 0%,
+          rgba(60, 140, 220, 0.25) 30%,
+          rgba(40, 120, 200, 0.15) 50%,
+          transparent 80%
+        );
+      transform: rotate(-25deg);
+      filter: blur(40px);
+      z-index: 0;
+      animation: flowRibbon1 20s ease-in-out infinite;
+      pointer-events: none;
+    }
+
+    /* Light ribbon 2 - secondary sweep */
+    body::after {
+      content: '';
+      position: fixed;
+      bottom: -30%;
+      right: -30%;
+      width: 90%;
+      height: 100%;
+      background: 
+        radial-gradient(ellipse 1000px 250px at 50% 50%, 
+          rgba(100, 180, 255, 0.35) 0%,
+          rgba(70, 150, 230, 0.22) 35%,
+          rgba(50, 130, 210, 0.12) 55%,
+          transparent 80%
+        );
+      transform: rotate(30deg);
+      filter: blur(45px);
+      z-index: 0;
+      animation: flowRibbon2 25s ease-in-out infinite;
+      pointer-events: none;
+    }
+
+    /* Additional light streaks container */
+    .aurora-streaks {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      pointer-events: none;
+      overflow: hidden;
+    }
+
+    .aurora-streaks::before {
+      content: '';
+      position: absolute;
+      top: 20%;
+      right: -10%;
+      width: 60%;
+      height: 70%;
+      background: 
+        radial-gradient(ellipse 800px 200px at 50% 50%, 
+          rgba(120, 200, 255, 0.3) 0%,
+          rgba(90, 170, 240, 0.18) 40%,
+          rgba(60, 140, 220, 0.08) 60%,
+          transparent 85%
+        );
+      transform: rotate(-40deg);
+      filter: blur(35px);
+      animation: flowRibbon3 30s ease-in-out infinite;
+    }
+
+    .aurora-streaks::after {
+      content: '';
+      position: absolute;
+      bottom: 10%;
+      left: 10%;
+      width: 50%;
+      height: 60%;
+      background: 
+        radial-gradient(ellipse 700px 180px at 50% 50%, 
+          rgba(90, 170, 250, 0.28) 0%,
+          rgba(70, 150, 230, 0.16) 40%,
+          rgba(50, 130, 210, 0.08) 65%,
+          transparent 85%
+        );
+      transform: rotate(20deg);
+      filter: blur(38px);
+      animation: flowRibbon1 28s ease-in-out infinite reverse;
     }
 
     header {
@@ -54,6 +176,7 @@
         inset 0 1px 0 rgba(255,255,255,0.25),
         0 0 40px rgba(74,158,255,0.2);
       position: relative;
+      z-index: 10;
     }
 
     header::before {
@@ -96,6 +219,8 @@
       max-width: 1100px;
       margin: 40px auto;
       padding: 28px;
+      position: relative;
+      z-index: 10;
     }
 
     .controls {
@@ -356,6 +481,7 @@
 </head>
 
 <body>
+<div class="aurora-streaks"></div>
 
 <header>
   <div class="header-inner">
