Change game item arrow symbol to '▶'

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
     const gameArrow = document.createElement('span');
     gameArrow.className = 'game-item-arrow';
-    gameArrow.textContent = 'â–¶';
+    gameArrow.textContent = '▶';
 
     gameHeader.appendChild(gameTitle);
     gameHeader.appendChild(gameArrow);
