--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Alpine Bay</title>
+  <title>The Apline Bay</title>
 
   <style>
     :root {
@@ -398,7 +398,7 @@
 <body>
 
 <header>
-  <div class="title">The Alpine Bay</div>
+  <div class="title">The Apline Bay</div>
 </header>
 
 <div class="container">
